Outlines are no longer removable. Fixed alignment issues.

--- a/static/static.css
+++ b/static/static.css
@@ -29,3 +29,7 @@ input {
 :focus-visible:not(button):not(input) {
     outline: none;
 }
+
+label {
+    cursor: inherit;
+}
